src/test/data/highlighting/unknown_instructions.tz
parameter string;
storage <error descr="Unknown type">units</error>;
code { <error descr="Unknown instruction">UNKNOWN_INSTRUCTION</error>;
    <error descr="Unknown instruction">OTHER_UNKNOWN</error>;
};
